[#223] This commit refactors the navbar structure (removed wrappign div) and fixes some CSS related to the bar.

--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -8,11 +8,9 @@
     background: #272525;
   }
 
-  div.header {
-    padding: 15px;
+  div.navbar-container {
     display: block;
-    height: 20px;
-    margin-bottom: 15px;
+    padding: 1em;
   }
 
   div.login-button {
